--- a/package.json
+++ b/package.json
@@ -13,5 +13,14 @@
     "url": "https://github.com/btjanaka/js-algorithms/issues"
   },
   "homepage": "https://github.com/btjanaka/js-algorithms#readme",
-  "dependencies": {}
+  "scripts": {
+    "build-docs": "jsdoc lib -d docs -c jsdoc-conf.json -t ./node_modules/ink-docstrap/template/ -R README.md",
+    "deploy-docs": "npm run build-docs && gh-pages -d docs"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "gh-pages": "^2.0.1",
+    "ink-docstrap": "^1.3.2",
+    "jsdoc": "^3.6.2"
+  }
 }
